@@ -3,12 +3,10 @@ package ru.tusur.edu.service.achievement;
 import lombok.RequiredArgsConstructor;
 import lombok.SneakyThrows;
 import org.springframework.stereotype.Service;
-import ru.tusur.edu.dto.achievement.AchievementDto;
-import ru.tusur.edu.dto.achievement.AchievementResponse;
+import ru.tusur.edu.dto.AchievementDto;
+import ru.tusur.edu.dto.AchievementResponse;
 import ru.tusur.edu.mapper.AchievementMapper;
 import ru.tusur.edu.repository.achievement.AchievementRepository;
-
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -21,7 +19,7 @@ public class AchievementService {
     public AchievementResponse findAll() {
         return AchievementResponse
                 .builder()
-                .achievements(achievementRepository.findAll().stream().map(achievementMapper::map).collect(Collectors.toList()))
+                .achievements(achievementRepository.findAll().stream().map(achievementMapper::map).toList())
                 .total(achievementRepository.count())
                 .build();
     }
